--- a/src/index.css
+++ b/src/index.css
@@ -13,21 +13,49 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.container {
+  padding-inline: 20px;
+  padding-block: 40px;
+  margin: 0 auto;
+  max-width: 1440px;
 }
-a:hover {
-  color: #535bf2;
+
+h1,
+h2,
+h3,
+h4,
+p,
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+ul,
+ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  display: block;
+  font-weight: 500;
+  color: #f9f9f9;
+  text-decoration: none;
 }
 
 body {
   margin: 0;
-  display: flex;
+  /* display: flex;
   place-items: center;
   min-width: 320px;
+  min-height: 100vh; */
   min-height: 100vh;
+  /* background-color: #213547; */
 }
 
 h1 {
@@ -54,15 +82,29 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+p {
+  color: #fff;
+}
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
+    color: #fff;
+    background-color: #242424;
   }
   button {
-    background-color: #f9f9f9;
+    color: #fff;
+    background-color: #121212;
+    /* hsla(0, 3%, 57%, 0.581); */
+  }
+  input {
+    color: #fff;
+    box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.1);
+    background-color: #121212;
+    /* hsla(0, 3%, 57%, 0.581); */
   }
 }
